syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";



message FightPropPair {
	float prop_value = 2;
	uint32 prop_type = 1;
}