syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";



message GameplayRecommendationReliquaryMainPropData {
	uint32 main_prop_id = 15;
	uint32 permillage = 9;
}