syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";



message MaterialDeleteInfo {
	bool has_delete_config = 1;
	oneof delete_info {
		DateTimeDelete date_delete = 3;
		DelayWeekCountDownDelete delay_week_count_down_delete = 4;
		CountDownDelete count_down_delete = 2;
	}
	message CountDownDelete {
		uint32 config_count_down_time = 2;
		map<uint32, uint32> delete_time_num_map = 1;
	}
	message DateTimeDelete {
		uint32 delete_time = 1;
	}
	message DelayWeekCountDownDelete {
		uint32 config_delay_week = 2;
		uint32 config_count_down_time = 3;
		map<uint32, uint32> delete_time_num_map = 1;
	}
}