syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";
import "Item.proto";
import "StoreType.proto";


message StoreItemChangeNotify {
	StoreType store_type = 1;
	repeated Item item_list = 15;
}